--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -2,8 +2,8 @@ server {
    
     listen 443 ssl;
     server_name         webcmd.local;
-    ssl_certificate     /etc/nginx/webcmd.crt;
-    ssl_certificate_key /etc/nginx/webcmd.key;
+    ssl_certificate     /etc/nginx/jrecdb.crt;
+    ssl_certificate_key /etc/nginx/jrecdb.key;
     #listen 80;
     index index.php index.html;
     root /var/www;
