--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:latest
 RUN apt-get clean && apt-get update && apt-get install -y nano spawn-fcgi fcgiwrap wget curl libcgi-pm-perl libjson-perl libdigest-sha-perl && apt-get clean
+#RUN apt-get install -y libcache-memcached-perl memcached
 RUN sed -i 's/www-data/nginx/g' /etc/init.d/fcgiwrap
 RUN chown nginx:nginx /etc/init.d/fcgiwrap
 ADD ./vhost.conf /etc/nginx/conf.d/default.conf
